--- a/main/aula_seq.html
+++ b/main/aula_seq.html
@@ -177,9 +177,9 @@
 							<p>Primeiramente é feita a declaração das variáveis, posteriormente são executados os comandos de entrada e/ou atribuição, depois é feito o processamento dos dados e no final realiza-se a saída de dados. 
 							</p>
 							<center>
-									<a href="img/seq/fluxo1.png" class="image-link">
+									<a href="img/seq/fluxo1.PNG" class="image-link">
 									<div class="item">
-										<img  class="img-responsive img-rounded" src="img/seq/fluxo1.png" alt="">
+										<img  class="img-responsive img-rounded" src="img/seq/fluxo1.PNG" alt="">
 									</div>
 								</a>
 								</center>
