--- a/main/aula_seq.html
+++ b/main/aula_seq.html
@@ -146,9 +146,9 @@
 							   estas geralmente são iguais as regras da álgebra.
 							</p>
 							<center>
-									<a href="img/seq/operadores.png" class="image-link">
+									<a href="img/seq/operadores.PNG" class="image-link">
 									<div class="item">
-										<img  class="img-responsive img-rounded" src="img/seq/operadores.png" alt="">
+										<img  class="img-responsive img-rounded" src="img/seq/operadores.PNG" alt="">
 									</div>
 								</a>
 								</center>
@@ -158,9 +158,9 @@
 							<h3>Estrutura básica de um programa em C</h3>
 							<p>Antes de tudo devemos entender a estrutura básica de um programa em C</p> 
 							<center>
-									<a href="img/seq/estrutura.png" class="image-link">
+									<a href="img/seq/estrutura.PNG" class="image-link">
 									<div class="item">
-										<img  class="img-responsive img-rounded" src="img/seq/estrutura.png" alt="">
+										<img  class="img-responsive img-rounded" src="img/seq/estrutura.PNG" alt="">
 									</div>
 								</a>
 								</center>
@@ -188,17 +188,17 @@
 							<p>As variáveis são declaradas logo após se determinar qual será o seu tipo.</p>
 								<h5>Em algoritmos</h5>
 								<<center>
-									<a href="img/seq/declaracao.png" class="image-link">
+									<a href="img/seq/declaracao.PNG" class="image-link">
 									<div class="item">
-										<img  class="img-responsive img-rounded" src="img/seq/declaracao.png" alt="">
+										<img  class="img-responsive img-rounded" src="img/seq/declaracao.PNG" alt="">
 									</div>
 								</a>
 								</center>
 								<h5>Em C</h5>
 								<center>
-									<a href="img/seq/declaracao1.png" class="image-link">
+									<a href="img/seq/declaracao1.PNG" class="image-link">
 									<div class="item">
-										<img  class="img-responsive img-rounded" src="img/seq/declaracao1.png" alt="">
+										<img  class="img-responsive img-rounded" src="img/seq/declaracao1.PNG" alt="">
 									</div>
 								</a>
 								</center>
@@ -220,9 +220,9 @@
 								</center>
 								<h5>Em C</h5>
 								<center>
-									<a href="img/seq/atribuicao1.png" class="image-link">
+									<a href="img/seq/atribuicao1.PNG" class="image-link">
 									<div class="item">
-										<img  class="img-responsive img-rounded" src="img/seq/atribuicao1.png" alt="">
+										<img  class="img-responsive img-rounded" src="img/seq/atribuicao1.PNG" alt="">
 									</div>
 								</a>
 								</center>
@@ -238,9 +238,9 @@
 								<h5>Em algoritmos</h5>
 								<p>Em algoritmos esse comando é representado pela palavra LEIA.</p>
 								<center>
-									<a href="img/seq/entrada1.png" class="image-link">
+									<a href="img/seq/entrada1.PNG" class="image-link">
 									<div class="item">
-										<img  class="img-responsive img-rounded" src="img/seq/entrada1.png" alt="">
+										<img  class="img-responsive img-rounded" src="img/seq/entrada1.PNG" alt="">
 									</div>
 								</a>
 								</center>
@@ -251,9 +251,9 @@
 									<li><b>2 -</b> Uma lista de argumentos que deverá conter as variáveis de destino, cada variável é precedida pelo símbolo &. Exemplo: &x, &y, &z,</li>
 								</ul> 
 								<center>
-									<a href="img/seq/entrada2.png" class="image-link">
+									<a href="img/seq/entrada2.PNG" class="image-link">
 									<div class="item">
-										<img  class="img-responsive img-rounded" src="img/seq/entrada2.png" alt="">
+										<img  class="img-responsive img-rounded" src="img/seq/entrada2.PNG" alt="">
 									</div>
 								</a>
 								</center>
@@ -268,9 +268,9 @@
 								<h5>Em algoritmos</h5>
 								<p>Em algoritmos esse comando é representado pela palavra ESCREVA</p>
 								<center>
-									<a href="img/seq/saida1.png" class="image-link">
+									<a href="img/seq/saida1.PNG" class="image-link">
 									<div class="item">
-										<img  class="img-responsive img-rounded" src="img/seq/saida1.png" alt="">
+										<img  class="img-responsive img-rounded" src="img/seq/saida1.PNG" alt="">
 									</div>
 								</a>
 								</center>
@@ -281,9 +281,9 @@
 									<li><b>2 -</b> Uma lista de argumentos que deverá conter as variáveis que serão impressas. Caso não se utilize variáveis na primeira parte, não é necessário acrescentar nada nessa parte. Exemplo: x, y, z,,</li>
 								</ul> 
 								<center>
-									<a href="img/seq/saida2.png" class="image-link">
+									<a href="img/seq/saida2.PNG" class="image-link">
 									<div class="item">
-										<img  class="img-responsive img-rounded" src="img/seq/saida2.png" alt="">
+										<img  class="img-responsive img-rounded" src="img/seq/saida2.PNG" alt="">
 									</div>
 								</a>
 								</center>
