--- a/main/aula_seq.html
+++ b/main/aula_seq.html
@@ -314,6 +314,8 @@
 						</a>
 						</div>
 					<center>
+					<h3>Video Explicativo - Estrutura Sequencial</h3>
+					<p>                                      </p>
 						<video width=80% height="315" class="img-responsive" controls>
 						  <source src="video/sequencial.mp4" type="video/mp4">
 						  <source src="movie.ogg" type="video/ogg">
